--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.17.10",
     "axios": "^1.6.5",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.0",
     "coolsms-node-sdk": "^2.1.0",
     "crypto": "^1.0.1",
