--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.17.10",
+    "@types/sharp": "^0.31.1",
     "axios": "^1.6.5",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.0",
     "coolsms-node-sdk": "^2.1.0",
     "crypto": "^1.0.1",
     "date-fns": "^3.1.0",
+    "form-data": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "next": "14.0.4",
@@ -25,11 +27,13 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "recharts": "^2.10.3",
+    "sharp": "^0.34.2",
     "socket.io-client": "^4.7.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
