--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NODE_OPTIONS='--max-old-space-size=4096' next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,7 +21,7 @@
     "form-data": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
-    "next": "14.0.4",
+    "next": "^14.2.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
