--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.17.10",
+    "@twilio/voice-sdk": "^2.14.0",
     "@types/sharp": "^0.31.1",
     "axios": "^1.6.5",
     "bcrypt": "^6.0.0",
@@ -24,13 +25,16 @@
     "lucide-react": "^0.517.0",
     "mongodb": "^6.16.0",
     "next": "^14.2.15",
+    "openai": "^5.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "recharts": "^2.10.3",
     "sharp": "^0.34.2",
-    "socket.io-client": "^4.7.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "twilio": "^5.7.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
